[gd_scene load_steps=5 format=3 uid="uid://cwfcdv52iraox"]

[ext_resource type="Script" uid="uid://dtmctjmkckmk2" path="res://Scripts/final_score_panel.gd" id="1_a35je"]
[ext_resource type="Texture2D" uid="uid://bhtx7ng8r7s3o" path="res://Arts/Gfx/Panels/GameOverPanel-background.png" id="2_2r37l"]
[ext_resource type="Theme" uid="uid://0js83h3tu5ft" path="res://ishido-base.tres" id="3_gtsaj"]

[sub_resource type="SystemFont" id="SystemFont_4np4h"]
subpixel_positioning = 0

[node name="FinalScorePanel" type="Control"]
auto_translate_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
script = ExtResource("1_a35je")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect2" type="TextureRect" parent="CenterContainer"]
custom_minimum_size = Vector2(780, 300)
layout_mode = 2
texture = ExtResource("2_2r37l")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -76.0
offset_right = 179.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="TextLabel" type="Label" parent="CenterContainer/TextureRect2/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_direction = 1
layout_mode = 2
theme = ExtResource("3_gtsaj")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = SubResource("SystemFont_4np4h")
theme_override_font_sizes/font_size = 28
text = "FINALSCORETEXT"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainerP1" type="HBoxContainer" parent="CenterContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="PlayerOneLabel" type="Label" parent="CenterContainer/TextureRect2/VBoxContainer/HBoxContainerP1"]
layout_mode = 2
theme = ExtResource("3_gtsaj")
text = "FSPPALYERONEKEY"

[node name="ScoreOneLabel" type="Label" parent="CenterContainer/TextureRect2/VBoxContainer/HBoxContainerP1"]
layout_mode = 2
theme = ExtResource("3_gtsaj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 32
text = "123456"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 12
visible_ratio = 2.0

[node name="HBoxContainerP2" type="HBoxContainer" parent="CenterContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 100

[node name="PlayerTwoLabel" type="Label" parent="CenterContainer/TextureRect2/VBoxContainer/HBoxContainerP2"]
layout_mode = 2
theme = ExtResource("3_gtsaj")
text = "FSPPALYERTWOKEY"

[node name="ScoreTwoLabel" type="Label" parent="CenterContainer/TextureRect2/VBoxContainer/HBoxContainerP2"]
layout_mode = 2
theme = ExtResource("3_gtsaj")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 13
theme_override_font_sizes/font_size = 32
text = "123456"
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 1
visible_characters = 12
visible_ratio = 2.0

[node name="Button" type="Button" parent="CenterContainer/TextureRect2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_gtsaj")
text = "FINALSCOREOK"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="item_rect_changed" from="CenterContainer/TextureRect2/VBoxContainer" to="." method="_on_v_box_container_item_rect_changed"]
[connection signal="pressed" from="CenterContainer/TextureRect2/VBoxContainer/Button" to="." method="_on_button_pressed"]
